--- a/src/styles/components/_countrycard.scss
+++ b/src/styles/components/_countrycard.scss
@@ -1,4 +1,5 @@
 .card {
+    cursor: pointer;
     background: burlywood;
     border-radius: 25px;
     box-shadow: 0 0 20px #3333333f;
@@ -10,6 +11,12 @@
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
+
+    transition: transform 0.2s;
+
+    &:hover {
+        transform: scale(1.05);
+    }
 
     .flag {
         width: 100%;
