--- a/src/styles/pages/_countryInfo.scss
+++ b/src/styles/pages/_countryInfo.scss
@@ -59,7 +59,7 @@
                     cursor: pointer;
                     font-weight: 600;
                     text-decoration: none;
-                    color: burlywood;
+                    color: #deb887;
     
                     &:hover {
                         color: #aaa;
