--- a/src/styles/components/_countrycard.scss
+++ b/src/styles/components/_countrycard.scss
@@ -35,6 +35,7 @@
     }
 
     .card-body {
+        text-align: center;
         width: 100%;
         padding: 20px;
         
@@ -77,6 +78,22 @@
             &:hover {
                 background: #aaa;
             }
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .card {
+        width: 150px;
+    
+        &:hover {
+            transform: scale(1);
+        }
+    
+        .card-body {
+            padding: 10px;
+            gap: 5px;
+            
         }
     }
 }
